crates/rustynes-test-harness/tests/snapshots/external_real_games__external_axrom_battletoads.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-007-AxROM/Battletoads.nes
rom_sha256=62547a7b8b0952d9a2236536924d1b1abc89456010e3667bf904432b9b0184ef
frames=600
fb_bytes=245760
cycles=17838525
audio_samples=439524
audio_fnv1a64=08293f6c8cd0dc6f
checkpoint f600 fb_fnv1a64=a03da16e17918914
