crates/rustynes-test-harness/tests/snapshots/external_real_games__external_axrom_marble_madness.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-007-AxROM/Marble Madness.nes
rom_sha256=3b2e24f069811a8032ced2ba905317e20271d43a33386cb42a4d591c41c052e7
frames=600
fb_bytes=245760
cycles=17838523
audio_samples=439524
audio_fnv1a64=dda9e74ae2696052
checkpoint f600 fb_fnv1a64=45d3f40939f2f693
