crates/rustynes-test-harness/tests/snapshots/external_real_games__external_fme7_mr_gimmick.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-069-FME7-Sunsoft5B/Mr. Gimmick.nes
rom_sha256=c228c24bb619aa340db2aebb789dd43a8136b3f3852e6be59656175700a738c8
frames=3901
fb_bytes=245760
cycles=129665250
audio_samples=3439303
audio_fnv1a64=543b8c768b00f136
checkpoint f3661 fb_fnv1a64=8a657f565bfa906d
checkpoint f3901 fb_fnv1a64=9cbfe63e32bf5bc7
