crates/rustynes-test-harness/tests/snapshots/external_real_games__external_gxrom_thunder_and_lightning.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-066-GxROM/Thunder & Lightning.nes
rom_sha256=902074679cf3292b898eb153ddfe7a343cf340054b858ae0958cb4a6f6089b97
frames=600
fb_bytes=245760
cycles=17838525
audio_samples=439524
audio_fnv1a64=3b8f4d8fc1d7dbe2
checkpoint f600 fb_fnv1a64=f8af6c78d711dc72
